--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "learn-ts",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
+    "json": "npx ts-node newJson.ts",
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
